# python-project-template

./: LICENSE  README.md  pyproject.toml  tox.ini
docs/: api.rst  conf.py  index.rst
src/: main.py
tests/features/: basic.feature
tests/features/steps/: basic_steps.py
tests/unit/: test_basic.py
