[project]
name = "template_project"        # <-- 
version = "0.1.0"                # <--
description = "Описание проекта" # <-- 
authors = [                      # <--
  { name = "Георгий Васильевич", email = "egorich0270@gmail.com" }
]
license = { text = "MIT" }       # <-- 
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    
]

[project.optional-dependencies]

test = [
    "pytest>=7.0",    # юнит тесты
    "behave>=1.2.6",  # BDD
    "tox>=4.0",       # тесты в разных окружениях + паралельно
]

docs = [
    "sphinx>=6.0", #автодока2
    "sphinx-rtd-theme>=1.2",   # тема для красивой документации
]

dev = [
    "black>=23.0",   # автоформатирование
    "isort>=5.12",   # сортировка импортов
    "flake8>=6.0",   # линтер
    "mypy>=1.0",     # проверка типов
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
